@@ -1,0 +1,2 @@
+vgopts: -q
+prog: bug392331
