@@ -1,0 +1,2 @@
+vgopts: -q --suppressions=bug392331.suppr
+prog: bug392331
